--- a/pm/app/templates/Ad/edit.latte
+++ b/pm/app/templates/Ad/edit.latte
@@ -2,7 +2,9 @@
 
 <h2 n:block="title">Editovat raklamu</h2>
 
-{control contactForm}
+<p>Tady se nastavuje sekce <em>reklama</em>. Při vkládání čísel používejte desetinou tečku. Jednotlivé možnosti select-ů (option) zadávejte do příslušných textových polí tak že je oddělíte stisknutím enteru. Cenu ke každé položce selectu-u (option) zadejte za oddělovač<code> | </code>jako číslo opět s desetinou tečkou, pokud je potřeba. Kromě čísla se mohou vyskytovat i další znaky, například '<code> Kč / kus</code>' nebo '<code> Kč / m2</code>'. Optiony bohužel neumožňují vložit horní index.</p>
+
+{control adEditForm}
 
 {snippet content section}
 	{ifset $content}
